# prisonners-dilemma

./: .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
Headers/: ConsoleHandler.h  Factory.h  FileManager.h  FlatMap.h  Game.h  GameExceptions.h  GameOutcome.h  IterativePrisonersDilemma.h  Metastrategy.h  PayoffsRule.h  PlayersManager.h  Response.h  RoundOutcome.h  Strategy.h
Implementations/: ConsoleHandler.cpp  FileManager.cpp  Game.cpp  GameExceptions.cpp  GameOutcome.cpp  IterativePrisonersDilemma.cpp  Metastrategy.cpp  PayoffsRule.cpp  PlayersManager.cpp  RoundOutcome.cpp  Strategy.cpp  main.cpp
Strategies/: AlwaysCooperate.cpp  AlwaysCooperate.h  AlwaysDefect.cpp  AlwaysDefect.h  Deduction.cpp  Deduction.h  Random.cpp  Random.h  SoftTitForTat.cpp  SoftTitForTat.h  ToughTitForTat.cpp  ToughTitForTat.h
Tests/: CMakeLists.txt  Test.cpp  mtx  mtx_bad
Tests/test_cfgs/: cfg1  cfg2
Tests/test_cfgs_bad1/: cfg_bad1
Tests/test_cfgs_bad2/: cfg_bad1
